# Article-Retrieval-System

./: .gitignore  README.md  pyproject.toml  requirements.txt  user_interface.py
data/: Exploratory Data Analysis.ipynb
docs/: Article-Retrieval-System.llm.gpt_api.OpenAIClient.html  Article-Retrieval-System.llm.gpt_api.html  Article-Retrieval-System.llm.html  Article-Retrieval-System.retrieval_system.components.chunk.ArticleChunker.html  Article-Retrieval-System.retrieval_system.components.chunk.SentenceCountSplitterStrategy.html  Article-Retrieval-System.retrieval_system.components.chunk.SpacyTextSplitterStrategy.html  Article-Retrieval-System.retrieval_system.components.chunk.TextSplitterStrategy.html  Article-Retrieval-System.retrieval_system.components.chunk.html  Article-Retrieval-System.retrieval_system.components.embedding.ArticleTransformer.html  Article-Retrieval-System.retrieval_system.components.embedding.html  Article-Retrieval-System.retrieval_system.components.html  Article-Retrieval-System.retrieval_system.components.vector_db_client.VectorDbClient.html  Article-Retrieval-System.retrieval_system.components.vector_db_client.html  Article-Retrieval-System.retrieval_system.html  Article-Retrieval-System.retrieval_system.retrieval_pipeline.RetrieverPipeline.html  Article-Retrieval-System.retrieval_system.retrieval_pipeline.html  Article-Retrieval-System.user_interface.html  all-documents.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  searchindex.json  undoccedSummary.html
llm/: gpt_api.py
(+5 files in other folders)
